--- a/src/components/styles/Login.css
+++ b/src/components/styles/Login.css
@@ -5,9 +5,16 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f5f5f5;
+    background-color: #d0d0d0;
   }
   
+  /* Header */
+.login-box img {
+  width:250px;
+  margin-bottom:30px;
+  margin-top:30px;
+}
+
   .login-box {
     background-color: #ffffff;
     padding: 40px;
