--- a/src/components/styles/Dashboard.css
+++ b/src/components/styles/Dashboard.css
@@ -44,6 +44,7 @@
 }
 
 /* Individual Section Boxes */
+.yesterday-org-stats,
 .dashboard-content .total-sales-stats, 
 .dashboard-content .top-users, 
 .dashboard-content .top-sales-managers, 
