--- a/src/components/styles/Login.css
+++ b/src/components/styles/Login.css
@@ -37,8 +37,9 @@
   display: block;
   font-weight: 600;
   text-align: left;
-  margin-top: 15px;   /* Lite extra utrymme ovanför varje label */
+  margin-top: 8px;   /* Lite extra utrymme ovanför varje label */
   margin-bottom: 5px; /* Avstånd mellan label och input */
+  margin-left: 10px;
 }
 
 /* Uppdaterad input-styling för en modernare look */
@@ -59,7 +60,7 @@
 }
 
 .login-box button {
-  width: 100%;
+  width: 97%;
   padding: 10px;
   background-color: #2c3e50;
   color: #ffffff;
