--- a/src/components/styles/SalesManagerDashboard.css
+++ b/src/components/styles/SalesManagerDashboard.css
@@ -118,3 +118,24 @@
   transform: scale(1.02);
   box-shadow: 6px 6px 12px #d1d9e6, -6px -6px 12px #ffffff;
 }
+
+.ranking-up {
+  color: green;
+  margin-left: 8px;
+}
+
+.ranking-down {
+  color: red;
+  margin-left: 8px;
+}
+
+.ranking-same {
+  color: #777;
+  margin-left: 8px;
+}
+
+.new-indicator {
+  color: rgb(173, 173, 177);
+  margin-left: 8px;
+  font-weight: bold;
+}
